--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install node_modules
         run: npm ci
 
-      # Runs a set of commands using the runners shell
-      - name: Build step
-        run: git add ./docs;git commit -m 'build and deploy app';git push origin master;
+      # Runs a set of commands using the runners shell- name: Deploy 🚀
+      - name: Build 🚀
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: gh-pages
+          folder: site
